--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     {{ data.err_msg }}
 {% endif %}
 
-<h2>Current ({{ data.server_now }})</h2>
+<h2>Current time: {{ data.server_now }}</h2>
 {% if data.boiler_current[1] %}
     <table>
         <tr>
@@ -33,7 +33,7 @@
 	
 	<h2>Override the current settings!</h2>
     {% if data.oride %}
-        <p>Manual override in place: {{ data.oride[2] }}C until {{ data.oride[1] }}</p>
+        <p>Manual override in place: {{ data.oride[2] }}C until {{ data.oride[1][11:16] }}</p>
         <form action = "{{ url_for('home') }}" method="post">
             <input type="submit" name="override_cancel" value="Cancel">
         </form>
@@ -44,12 +44,16 @@
             <table>
                 <tr>
                     <td>I want to aim for:</td>
-                    <td><input type="number" name="override_temp" min="7" max="30" value="21"></td>
+                    <td>
+                        <input type="number" name="override_temp" min="7" max="30" value="21">
+                    </td>
                     <td>C</td>
                 </tr>
                 <tr>
                     <td>Until:</td>
-                    <td><input type="time" name="override_expiry" min="00:00" max="23:59" required></td>
+                    <td>
+                        <input type="time" name="override_expiry" min="00:00" max="23:59" required>
+                    </td>
                 </tr>
                 <tr>
                     <td><input type="submit" value="Submit"></td>
